[tool.poetry]
name = "books-scraper"
version = "0.1.0"
description = "A book scrapper writter in python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
lxml = "^5.2.1"
pika = "^1.3.2"
pymongo = "^4.7.1"
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
